# DDoS-Defense-System

./: LICENSE  README.md  pyproject.toml  run_ai_pipeline.sh
ai_engine/: data_fetcher.py  dataset_prep.py  evaluate.py  realtime_detector.py  train.py  transformer_model.py
